adding script files
adding script files

--- a/absolute wateR-Project1_Markdown.ipynb
+++ b/absolute wateR-Project1_Markdown.ipynb
@@ -15,8 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  #        - by Team absolute wateR\n",
-    "  ##             (Ketan, Maithili,Rohit)"
+    "  #        - by Rohit Kapa"
    ]
   },
   {
